tests/baselines/reference/structExtendsShadowedConstructorFunction.errors.txt
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendsShadowedConstructorFunction.ts(5,22): error TS2507: Type 'number' is not a constructor function type.


==== tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendsShadowedConstructorFunction.ts (1 errors) ====
    struct C { foo: string; }
    
    module M {
        var C = 1;
        struct D extends C { // error, C must evaluate to constructor function
                         ~
!!! error TS2507: Type 'number' is not a constructor function type.
            bar: string;
        }
    }